--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,7 @@ coverage.xml
 *.py.cover
 .hypothesis/
 .pytest_cache/
+.pytest_cache-*/
 cover/
 
 # Translations
@@ -138,6 +139,7 @@ celerybeat.pid
 .env
 .envrc
 .venv
+.venv-*
 env/
 venv/
 ENV/
@@ -156,6 +158,7 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+.mypy_cache-*/
 .dmypy.json
 dmypy.json
 
@@ -207,3 +210,5 @@ marimo/_lsp/
 __marimo__/
 
 uv.lock
+.DS_Store
+Makefile
